--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "autocommit": "bash scripts/git-multi-commit.sh"
   },
   "dependencies": {
     "vue": "^3.5.22"
