--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "deploy": "bash scripts/deploy-github-pages.sh",
     "autocommit": "bash scripts/git-multi-commit.sh"
   },
   "dependencies": {
